[gd_scene load_steps=33 format=3 uid="uid://bgcib1r1vdaj4"]

[ext_resource type="Script" path="res://player/player.gd" id="1_1i2q3"]
[ext_resource type="PackedScene" uid="uid://tpy3riu1htft" path="res://weapons/rifle.tscn" id="2_5e6iy"]
[ext_resource type="Script" path="res://player/WeaponHolder.gd" id="2_7txp3"]
[ext_resource type="Script" path="res://player/Camera3D.gd" id="5_5ndx2"]
[ext_resource type="PackedScene" uid="uid://3ullycelqk7b" path="res://Interface/user_interface.tscn" id="5_hpnna"]
[ext_resource type="Script" path="res://player/IdlePlayerState.gd" id="5_j8ths"]
[ext_resource type="Script" path="res://player/HUD.gd" id="5_p0uaf"]
[ext_resource type="PackedScene" uid="uid://te5sn0fw0ec1" path="res://weapon_resources/bullet.tscn" id="5_u487o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbcfd"]
albedo_color = Color(0.8, 0.129412, 0.0352941, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1r826"]
material = SubResource("StandardMaterial3D_jbcfd")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qg0lc"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j7ul0"]
radius = 0.4
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_wftn7"]
size = Vector3(1.50824, 0.434082, 1.52338)

[sub_resource type="Animation" id="Animation_0erex"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ee7ky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.138086, -0.458703)]
}

[sub_resource type="Animation" id="Animation_s5ty4"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0261799, 0, 0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_o8dnv"]
resource_name = "revolver_activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.377606, -0.227889, -0.653209)]
}

[sub_resource type="Animation" id="Animation_qj47k"]
resource_name = "revolver_deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8732m"]
resource_name = "revolver_reload"
length = 1.5

[sub_resource type="Animation" id="Animation_ipvdx"]
resource_name = "revolver_shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.368114, -0.297107, -0.787791)]
}

[sub_resource type="Animation" id="Animation_xkqlg"]
resource_name = "revolver_walk"
length = 0.5
loop_mode = 2

[sub_resource type="Animation" id="Animation_jotgw"]
resource_name = "rifle_activate"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.980072, 0), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.599646, -0.825094, -1.51084), Vector3(0.151351, -0.605595, -1.10883), Vector3(0.392272, -0.36928, -1.24942)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.394312, -0.369993, -1.2514)]
}

[sub_resource type="Animation" id="Animation_5csx7"]
resource_name = "rifle_aim_down_sights"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0, -0.10349, -0.957478)]
}

[sub_resource type="Animation" id="Animation_dm2ny"]
resource_name = "rifle_deactivate"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.00032, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0.392272, -0.945056, -1.24942)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_w3p26"]
resource_name = "rifle_hip_fire"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, 0), Vector3(0, -1.5708, 0), Vector3(-4.372e-08, -1.5708, -0.0120777), Vector3(-2.08267e-07, -1.5708, -0.057561), Vector3(-2.08267e-07, -1.5708, -0.057561), Vector3(0.118612, -1.5708, -0.0575614)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0.392272, -0.36928, -1.23639), Vector3(0.392272, -0.36928, -1.21552), Vector3(0.392272, -0.36928, -1.19464), Vector3(0.392272, -0.36928, -1.15507), Vector3(0.392272, -0.36928, -1.15507), Vector3(0.392272, -0.36928, -1.14059)]
}

[sub_resource type="Animation" id="Animation_87el6"]
resource_name = "rifle_reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(-0.490935, -1.32209, -0.494123), Vector3(-0.490935, -1.32209, -0.494123), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0.392272, -0.114459, -1.17909), Vector3(0.392272, -0.114459, -1.17909), Vector3(0.392272, -0.36928, -1.24942)]
}

[sub_resource type="Animation" id="Animation_ypxlf"]
resource_name = "rifle_run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.821844, 0), Vector3(0.396161, -0.501149, -0.452918)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.198948, -0.36928, -1.1305), Vector3(-0.761033, -0.107519, -0.810742)]
}

[sub_resource type="Animation" id="Animation_7d14k"]
resource_name = "rifle_shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:can_fire")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(-6.92711e-07, -1.5708, -0.192545), Vector3(0, -1.5708, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponHolder/rifle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0.392272, -0.275704, -1.1106), Vector3(0.392272, -0.36928, -1.24942)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponHolder/BulletMarker:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.394312, -0.369993, -1.26462)]
}

[sub_resource type="Animation" id="Animation_j0ysx"]
resource_name = "rifle_walk"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, 0), Vector3(0, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(0.392272, -0.344117, -1.24942), Vector3(0.392272, -0.36928, -1.24942)]
}

[sub_resource type="Animation" id="Animation_h5t8f"]
resource_name = "rilfe_aim_down_sight_fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 2.63902, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.10349, -0.957478), Vector3(0, -0.10349, -0.955337), Vector3(0, -0.10349, -0.943063), Vector3(0, -0.10349, -0.914317), Vector3(0, -0.10349, -0.861774), Vector3(0, -0.10349, -0.825276)]
}

[sub_resource type="Animation" id="Animation_m7nlc"]
resource_name = "runing_with_rifle_start"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponHolder/rifle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -0.985678, 0), Vector3(0, -0.821844, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponHolder/rifle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponHolder/rifle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.392272, -0.36928, -1.24942), Vector3(-0.0643378, -0.36928, -1.24942), Vector3(-0.198948, -0.36928, -1.1305)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6bnf"]
_data = {
"Jump": SubResource("Animation_0erex"),
"RESET": SubResource("Animation_ee7ky"),
"landing": SubResource("Animation_s5ty4"),
"revolver_activate": SubResource("Animation_o8dnv"),
"revolver_deactivate": SubResource("Animation_qj47k"),
"revolver_reload": SubResource("Animation_8732m"),
"revolver_shoot": SubResource("Animation_ipvdx"),
"revolver_walk": SubResource("Animation_xkqlg"),
"rifle_activate": SubResource("Animation_jotgw"),
"rifle_aim_down_sights": SubResource("Animation_5csx7"),
"rifle_deactivate": SubResource("Animation_dm2ny"),
"rifle_hip_fire": SubResource("Animation_w3p26"),
"rifle_reload": SubResource("Animation_87el6"),
"rifle_run": SubResource("Animation_ypxlf"),
"rifle_shoot": SubResource("Animation_7d14k"),
"rifle_walk": SubResource("Animation_j0ysx"),
"rilfe_aim_down_sight_fire": SubResource("Animation_h5t8f"),
"runing_with_rifle_start": SubResource("Animation_m7nlc")
}

[node name="Player" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_1i2q3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.973201, 0)
mesh = SubResource("CapsuleMesh_1r826")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.962078, 0)
shape = SubResource("ConvexPolygonShape3D_qg0lc")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.447547, 0)
shape = SubResource("CapsuleShape3D_j7ul0")

[node name="Pick_Up_Detection" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0621643, 0.214488, 0.00772095)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pick_Up_Detection"]
shape = SubResource("BoxShape3D_wftn7")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.605, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="SpotLight3D" type="SpotLight3D" parent="Neck/Head"]
light_color = Color(0.937255, 0.992157, 0.54902, 1)
light_energy = 5.0
light_volumetric_fog_energy = 1.808

[node name="Eyes" type="Node3D" parent="Neck/Head"]

[node name="WeaponHolder" type="Node3D" parent="Neck/Head/Eyes" node_paths=PackedStringArray("_weapon_resources")]
script = ExtResource("2_7txp3")
_weapon_resources = [NodePath("rifle")]
_start_weapons = Array[String](["rifle"])

[node name="rifle" parent="Neck/Head/Eyes/WeaponHolder" instance=ExtResource("2_5e6iy")]
transform = Transform3D(0.540033, 0, -0.841643, 0, 0.999998, 0, 0.841643, 0, 0.540033, 0.392272, -0.945056, -1.24942)
activate_anim = "rifle_activate"
hip_fire = "rifle_shoot"
reload_anim = "rifle_reload"
deactivate_anim = "rifle_deactivate"
run_animation = "rifle_run"
walk_animation = "rifle_walk"
current_ammo = 10000
reserve_ammo = 60
magazine = 30
max_ammo = 100
can_fire = true
Type = 2
weapon_range = 2000
damage = 1
projectile_to_load = ExtResource("5_u487o")
projectile_velocity = 150

[node name="BulletMarker" type="Marker3D" parent="Neck/Head/Eyes/WeaponHolder"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.138086, -0.458703)
visible = false
script = ExtResource("5_5ndx2")

[node name="CanvasLayer" type="CanvasLayer" parent="Neck/Head/Eyes/Camera3D"]
script = ExtResource("5_p0uaf")

[node name="VBoxContainer" type="VBoxContainer" parent="Neck/Head/Eyes/Camera3D/CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CurrentWeaponContainer" type="HBoxContainer" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/CurrentWeaponContainer"]
layout_mode = 2
text = "Current Weapon:"

[node name="CurrentWeapon" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/CurrentWeaponContainer"]
layout_mode = 2

[node name="AmmoContainer" type="HBoxContainer" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/AmmoContainer"]
layout_mode = 2
text = "Ammo:"

[node name="CurrentAmmo" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/AmmoContainer"]
layout_mode = 2

[node name="WeaponStackContainer" type="HBoxContainer" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/WeaponStackContainer"]
layout_mode = 2
text = "WeaponStack:"

[node name="WeaponStack" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/WeaponStackContainer"]
layout_mode = 2

[node name="StanceContainer" type="HBoxContainer" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/StanceContainer"]
layout_mode = 2
text = "Current Stance:"

[node name="PlayerStance" type="Label" parent="Neck/Head/Eyes/Camera3D/CanvasLayer/VBoxContainer/StanceContainer"]
layout_mode = 2

[node name="CrossHair" parent="Neck/Head/Eyes/Camera3D/CanvasLayer" instance=ExtResource("5_hpnna")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_j6bnf")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
collision_mask = 2
debug_shape_custom_color = Color(0, 0.929412, 0, 1)
debug_shape_thickness = 5

[node name="Timers" type="Node" parent="."]

[node name="SlideCooldown" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="."]

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_j8ths")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]

[connection signal="body_entered" from="Pick_Up_Detection" to="Neck/Head/Eyes/WeaponHolder" method="_on_pick_up_detection_body_entered"]
[connection signal="update_dict" from="Neck/Head/Eyes/WeaponHolder" to="Neck/Head/Eyes/Camera3D/CanvasLayer" method="_on_weapon_holder_update_dict"]
[connection signal="update_stack" from="Neck/Head/Eyes/WeaponHolder" to="Neck/Head/Eyes/Camera3D/CanvasLayer" method="_on_weapon_holder_update_stack"]
[connection signal="update_weapon_ammo_enter" from="Neck/Head/Eyes/WeaponHolder" to="Neck/Head/Eyes/Camera3D/CanvasLayer" method="_on_weapon_holder_update_weapon_ammo_enter"]
[connection signal="weapon_change" from="Neck/Head/Eyes/WeaponHolder" to="Neck/Head/Eyes/Camera3D/CanvasLayer" method="_on_weapon_holder_weapon_change"]
[connection signal="animation_finished" from="Neck/Head/Eyes/AnimationPlayer" to="Neck/Head/Eyes/WeaponHolder" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timers/SlideCooldown" to="." method="_on_slide_cooldown_timeout"]
